Add basic styling to SVG icons.

--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -14,6 +14,17 @@ object {
 	max-width: 100%;
 }
 
+/* SVG Icons base styles. */
+.icon {
+	display: inline-block;
+	fill: currentColor;
+	height: 1em;
+	position: relative;
+	top: -0.0625em;
+	vertical-align: middle;
+	width: 1em;
+}
+
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
