--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -83,6 +83,18 @@
 	.main-navigation ul {
 		display: block;
 	}
+	.main-navigation ul ul .menu-item-has-children > a > .icon,
+	.main-navigation ul ul .page_item_has_children > a > .icon {
+		margin-top: -9px;
+		left: auto;
+		position: absolute;
+		right: 1em;
+		top: 50%;
+		-ms-transform: rotate(-90deg);
+		-moz-transform: rotate(-90deg);
+		-webkit-transform: rotate(-90deg);
+		transform: rotate(-90deg);
+	}
 }
 
 .comment-navigation,
