--- a/style.css
+++ b/style.css
@@ -618,6 +618,19 @@ a:active {
 	.main-navigation ul {
 		display: block;
 	}
+
+	.main-navigation ul ul .menu-item-has-children > a > .icon,
+	.main-navigation ul ul .page_item_has_children > a > .icon {
+		margin-top: -9px;
+		left: auto;
+		position: absolute;
+		right: 1em;
+		top: 50%;
+		-ms-transform: rotate(-90deg);
+		-moz-transform: rotate(-90deg);
+		-webkit-transform: rotate(-90deg);
+		transform: rotate(-90deg);
+	}
 }
 
 .site-main .comment-navigation,
@@ -820,6 +833,17 @@ embed,
 iframe,
 object {
 	max-width: 100%;
+}
+
+/* SVG Icons base styles. */
+.icon {
+	display: inline-block;
+	fill: currentColor;
+	height: 1em;
+	position: relative;
+	top: -0.0625em;
+	vertical-align: middle;
+	width: 1em;
 }
 
 /*--------------------------------------------------------------
